fixed issue with dropdown being below codemirror scrollbar due to z-index

--- a/components/dropdown.scss
+++ b/components/dropdown.scss
@@ -7,7 +7,7 @@ dropdown {
 
   .dropdown-items {
     position: absolute;
-    z-index: 5;
+    z-index: 10;
     background-color: $background;
     border: 1px solid $medium_border;
     text-align: left;
